RESOLVED FIXED 255039
REGRESSION (macOS 13.3): Holding down-arrow beeps while scrolling before reaching end of document in WKWebView
https://bugs.webkit.org/show_bug.cgi?id=255039
Summary REGRESSION (macOS 13.3): Holding down-arrow beeps while scrolling before reac...
Neil Jhaveri
Reported 2023-04-05 10:35:50 PDT
Created attachment 465780 [details] Demonstration of the problem New to macOS 13.3, holding the down-arrow key provides a smooth scrolling experience in WKWebView. However, holding the down-arrow key results in a repeated-keystroke beeping even before reaching the end (or top) of the document. See attached video. Prior to 13.3, the beeping would only happen when you reached the end of the document and there was no additional content left to scroll.
Attachments
Demonstration of the problem (2.18 MB, video/mp4)
2023-04-05 10:35 PDT, Neil Jhaveri
no flags
Sample app (33.77 KB, application/zip)
2023-04-05 10:36 PDT, Neil Jhaveri
no flags
Neil Jhaveri
Comment 1 2023-04-05 10:36:06 PDT
Created attachment 465781 [details] Sample app
Radar WebKit Bug Importer
Comment 2 2023-04-05 10:56:28 PDT
Richard Robinson
Comment 3 2023-04-05 22:24:41 PDT
EWS
Comment 4 2023-04-07 18:38:21 PDT
Committed 262743@main (77d05a5a85fd): <https://commits.webkit.org/262743@main> Reviewed commits have been landed. Closing PR #12447 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.