REGRESSION (macOS 13.3): Holding down-arrow beeps while scrolling before reaching end of document in WKWebView https://bugs.webkit.org/show_bug.cgi?id=255039 rdar://107667589

Reviewed by Aditya Keerthi.

This was happening because the keyboard event is considered "unhandled" if the triggering key is
already held down.

This PR fixes this by simply correcting this behavior, since these events should actually be
considered "handled".

* Source/WebCore/platform/KeyboardScrollingAnimator.cpp:
(WebCore::KeyboardScrollingAnimator::beginKeyboardScrollGesture):
* Tools/TestWebKitAPI/Tests/mac/KeyboardEventTests.mm:
(-[NSViewWithKeyDownOverride keyDown:]):
(TestWebKitAPI::arrowKeyDownWithKeyRepeat):
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/262743@main